B-3 Update of Photo Controller, Service and Repository